View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023673 | Community | OCCT:Visualization | public | 2012-12-27 09:37 | 2013-04-29 15:21 |
Reporter | Assigned To | ||||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | ||||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023673: Static method Image_PixMap::SizePixelBytes is not exported | ||||
Description | The method static Standard_Size SizePixelBytes (const Image_PixMap::ImgFormat thePixelFormat); misses Standard_EXPORT directive. This error prevents this method from being exported on Windows. A particular consequence is that OCC C# Wrapper tool can not wrap this class. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Could you please have a look? |
|
Branch CR23673 ready for reviewing. |
|
No comments - trivial fix. |
|
Dear BugMaster, Branch CR23673 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed |
occt: master a940de41 2012-12-27 06:43:05
|
0023673: Static method Image_PixMap::SizePixelBytes is not exported Static method Standard_Size SizePixelBytes (const Image_PixMap::ImgFormat thePixelFormat) exported under Windows to prevent link error in the user code. |
Affected Issues 0023673 |
|
mod - src/Image/Image_PixMap.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-12-27 09:37 |
|
New Issue | |
2012-12-27 09:37 |
|
Assigned To | => san |
2012-12-27 10:09 |
|
Note Added: 0022857 | |
2012-12-27 10:09 |
|
Assigned To | san => kgv |
2012-12-27 10:09 |
|
Status | new => assigned |
2012-12-27 10:40 |
|
Note Added: 0022858 | |
2012-12-27 10:40 |
|
Status | assigned => resolved |
2012-12-27 11:10 |
|
Summary | Static method Image_PixMap::SizePixelBytes misses is not exported => Static method Image_PixMap::SizePixelBytes is not exported |
2012-12-27 11:24 | kgv | Note Added: 0022860 | |
2012-12-27 11:24 | kgv | Assigned To | kgv => bugmaster |
2012-12-27 11:24 | kgv | Severity | minor => trivial |
2012-12-27 11:24 | kgv | Status | resolved => reviewed |
2012-12-27 11:24 | kgv | Platform | => Windows |
2012-12-27 15:07 |
|
Assigned To | bugmaster => mkv |
2013-01-15 17:40 |
|
Note Added: 0022968 | |
2013-01-15 17:40 |
|
Test case number | => Not needed |
2013-01-15 17:40 |
|
Assigned To | mkv => bugmaster |
2013-01-15 17:40 |
|
Status | reviewed => tested |
2013-01-21 18:29 |
|
Changeset attached | => occt master a940de41 |
2013-01-21 18:29 |
|
Assigned To | bugmaster => san |
2013-01-21 18:29 |
|
Status | tested => verified |
2013-01-21 18:29 |
|
Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |