0023673: Static method Image_PixMap::SizePixelBytes is not exported

Static method Standard_Size SizePixelBytes (const Image_PixMap::ImgFormat thePixelFormat)
exported under Windows to prevent link error in the user code.